fix text overflow onnproject

--- a/styles/my.css
+++ b/styles/my.css
@@ -632,7 +632,6 @@ textarea {
   background-color: var(--bg-color-project);
   display: flex;
   width: 100%;
-  height: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -641,8 +640,6 @@ textarea {
   display: grid;
   width: 95%;
   max-width: calc(800px + 4vmax); /*max width of project*/
-  height: 100%;
-  min-height: 100vh;
   grid-template-rows: 2.7em auto 0.5em;
   font-size: 1em;
 }
@@ -663,7 +660,7 @@ textarea {
   background-color: var(--bg-color-main4);
   width: 100%;
   height: 100%;
-  max-height: 90vh;
+  min-height: 82vh; /*just to fit*/
   max-width: 95vw;
   font-size: 1em;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
@@ -681,11 +678,12 @@ textarea {
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 .slides > div {
   position: relative;
   display: grid;
+  overflow-y: auto;
   margin-right: 0.5em;
   flex-shrink: 0; /* disable shrink so it content to go over parent define width*/
   scroll-snap-align: start; /*snap point*/
@@ -694,7 +692,7 @@ textarea {
   background-color: var(--bg-color-main2);
   font-size: 1em;
   grid-template-columns: 1fr 1fr auto;
-  grid-template-rows: 3em 1fr 1.5em 1em; /*last 1em to deal with scroll on native ios*/
+  grid-template-rows: 3em 1fr 1.5em 0.5em; /*last 0.5em to deal with scroll on native ios*/
   box-sizing: border-box; /* need to avoid mess up when adding margin and padding*/
   border-top-right-radius: 10%;
   border-top-left-radius: 10%;
@@ -762,8 +760,11 @@ textarea {
   grid-column: span 3;
   text-align: left;
   width: 86%;
+  height: 100%;
+  background-color: var(--bg-color-main2);
   margin: 0 auto;
   font-size: 0.75em;
+  
 }
 .project-link {
   grid-column: 3;
@@ -796,8 +797,8 @@ textarea {
 }
 
 .slides::-webkit-scrollbar {
-  width: 1em;
-  height: 1em;
+  width: 1.1em;
+  height: 1.1em;
 }
 .slides::-webkit-scrollbar-thumb {
   background: var(--bg-color-main3);
@@ -831,6 +832,7 @@ textarea {
   background: #f2865b;
   border-radius: 5px;
 }
+
 .slides > div:target {
   animation: drop2 0.7s normal 1 ease-in-out;
   -webkit-animation: drop2 0.7s normal 1 ease-in-out;
